gcc/testsuite/gdc.test/compilable/imports/test72c.d
module imports.test72c;

void foo()
{
}
