gcc/testsuite/gdc.test/fail_compilation/imports/test21246.d
module imports.test21246;

class Clock {}

class B
{
    void set (Clock clock) { }
}
